# kestrel_compiler

./: CMakeLists.txt  CodeGen.cpp  CodeGen.cpp.edited  CodeGen.h  Makefile  README  README.md  block.cpp  block.h  config.h  declaration.cpp  declaration.h  environment.cpp  environment.h  expression.cpp  expression.h  kestrel  keywords.c  keywords.h  lexical.c  lexical.h  lexsupport.c  lexsupport.h  linklst.h  log.cpp  log.h  main.cpp  main.h  program.cpp  program.h  reference.cpp  reference.h  sets.h  statement.cpp  statement.h  stringpool.c  stringpool.h  symboltable.c  symboltable.h  testlex.c  (+2 more)
Testing/: sample.k
assemblySamples/: for.c  for.s  function.c  function.s  hello.s  if.c  if.s  loop  loop.c  loop.s  mcompile.sh  operators.c  operators.s  switch.c  switch.s  test.c  test.s  until.c  until.s  while.c  while.s
nbproject/: configurations.xml  project.xml
nbproject/private/: CodeAssistancePathMapper.properties  Default.properties  configurations.xml  private.xml
tests/: testCodeGen.cpp  testCodeGen.h  testExpression.cpp  testExpression.h  testLexer.cpp  testLexer.h  testStatement.cpp  testStatement.h  testStringPool.cpp  testStringPool.h  testSymbolTable.cpp  testSymbolTable.h  tester.cpp  tester.h  testlinklst.cpp  testlinklst.h
tests/samples/: for_loop.k  hello_world.k
tests/samples/declarations/do/: good_1.k
tests/samples/declarations/if/: bad_1.k  bad_2.k  bad_3.k  good_1.k  good_2.k  good_3.k  good_4.k
tests/samples/declarations/until/: bad_1.k  good_1.k
tests/samples/declarations/while/: bad_1.k  good_1.k  good_2.k
tests/samples/expressions/Operators/: and.k
tests/samples/expressions/comparing/: equal.k  in.k  less_than_equal.k  not_equal.k
tests/samples/expressions/parens/: double.k  single.k  single_missing.k  single_missing_brace.k  single_missing_bracket.k
